# reasoning_hydra

./: .gitignore  CMakeLists.txt  LICENSE  MESH_GENERATION.md  README.md  package.xml
config/3rscan/: object_search_config.yaml  reconstruction_config.yaml
config/anymal/: frontend_config.yaml
config/anymal_recorded/: backend_config.yaml  frontend_config.yaml  object_search_config.yaml  reconstruction_config.yaml
config/default/: pipeline.yaml
config/default_robot/: backend_subscriber_config.yaml
config/eagle/: reconstruction_config.yaml
config/hm3dsem/: frontend_config.yaml  reconstruction_config.yaml
config/label_spaces/: 3rscan_label_space.yaml  ade20k_full_label_space.yaml  ade20k_full_names.yaml  anymal_label_space.yaml  anymal_names.yaml  meronomy_label_space.yaml
config/lapwing/: reconstruction_config.yaml
config/phoenix/: warty_lidar_reconstruction_config.yaml
config/replica/: frontend_config.yaml  reconstruction_config.yaml
config/robot/: backend_config.yaml  frontend_config.yaml  reconstruction_config.yaml
config/spot/: frontend_config.yaml
config/uhumans2/: object_search_config.yaml
docker/: Dockerfile  build_image.sh  enter_container.sh  run_container.sh
install/: packages.repos
python/: CMakeLists.txt  bindings.cpp
src/: CMakeLists.txt
src/backend/: backend_module.cpp  update_rooms_buildings_functor.cpp
src/common/: batch_pipeline.cpp  global_info.cpp  hydra_pipeline.cpp  label_remapper.cpp  semantic_color_map.cpp  shared_dsg_info.cpp  shared_module_state.cpp
src/frontend/: frontend_module.cpp  frontier_extractor.cpp  mesh_segmenter.cpp  place_2d_segmenter.cpp  place_2d_split_logic.cpp
src/input/: CMakeLists.txt  camera_lidar_fusion.cpp  (+6 more)
(+74 files in other folders)
