<?xml version="1.0"?>
<package format="2">
  <name>hydra</name>
  <version>2.0.0</version>
  <description>Reasoning scene graph package</description>

  <author email="albert.g.puigjaner@ntnu.no">Albert Gassol</author>
  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="albert.g.puigjaner@ntnu.no">Albert Gassol</maintainer>

  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>config_utilities</depend>
  <depend>eigen</depend>
  <depend>gtsam</depend>
  <depend>kimera_pgmo</depend>
  <depend>spatial_hash</depend>
  <depend>spark_dsg</depend>
  <depend>teaserpp</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
